# unreasonable-llama-discord

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  __main__.py  discord_client.py  format_and_check.ps1  format_and_check.sh  llama_backend.py  pyproject.toml  unreasonable-config.toml  unreasonable_llama.py  v0.1.py
.github/workflows/: check-code.yml
docs/: architecture.drawio
legacy/: v0.1.py
scripts/: format_and_check.ps1  format_and_check.sh
tests/: bot_database_tests.py  llama_backend_tests.py
unllamabot/: __main__.py  bot_config.py  bot_core.py  bot_database.py  discord_client.py  llama_backend.py  llm_utils.py
