[tool.poetry]
name = "unreasonable-llama-discord"
version = "0.1.0"
description = "Simple Discord bot using unreasonable-llama"
authors = ["SteelPh0enix <wojciech_olech@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
discord-py = "^2.4.0"
unreasonable-llama = "0.1.1"
transformers = "^4.42.3"
jinja2 = "^3.1.4"
sentencepiece = "^0.2.0"
protobuf = "^5.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
