[tool.poetry]
name = "unreasonable-llama-discord"
version = "0.2.0"
description = "Simple Discord bot using unreasonable-llama"
authors = ["SteelPh0enix <wojciech_olech@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
discord-py = "^2.4.0"
unreasonable-llama = "^0.2.8"
transformers = "^4.42.3"
jinja2 = "^3.1.4"
sentencepiece = "^0.2.0"
protobuf = "^5.27.2"
anyio = {extras = ["trio"], version = "^4.4.0"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"
ruff-lsp = "^0.0.54"
mypy = "^1.11.0"
pre-commit = "^3.8.0"
pytest = "^8.3.2"

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*_tests.py"]
python_functions = ["test_*"]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
